[gd_scene load_steps=54 format=3 uid="uid://b6o4kxj8bpeqp"]

[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_e558t"]
[ext_resource type="Script" path="res://Scripts/Health_Component.gd" id="2_5lvyh"]
[ext_resource type="Texture2D" uid="uid://bfqqdf3sjab1c" path="res://Assets/Monster 1-Sheet.png" id="3_30pai"]
[ext_resource type="PackedScene" uid="uid://bb8anttpe5l7f" path="res://hitbox_component.tscn" id="4_lomkv"]
[ext_resource type="Texture2D" uid="uid://dhgymxgvx8h2w" path="res://Assets/Monster attack-Sheet.png" id="5_oa5hq"]
[ext_resource type="Script" path="res://Scripts/RayCastDown.gd" id="6_kkusd"]
[ext_resource type="Script" path="res://Scripts/RayCastLeft.gd" id="7_ggypq"]
[ext_resource type="Script" path="res://Scripts/RayCastRight.gd" id="8_abhmx"]
[ext_resource type="Script" path="res://Scripts/RayCastUp.gd" id="9_pfecv"]
[ext_resource type="Script" path="res://Scripts/RayCastUp-Left.gd" id="10_aacqq"]
[ext_resource type="Script" path="res://Scripts/RayCastUp-Right.gd" id="11_vj3u4"]
[ext_resource type="Script" path="res://Scripts/RayCastDown-Right.gd" id="12_wos87"]
[ext_resource type="Script" path="res://Scripts/RayCastDown-Left.gd" id="13_trn8b"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2t8jv"]

[sub_resource type="Animation" id="Animation_ovhcw"]
resource_name = "attack_back"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attack_sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot"
}]
}

[sub_resource type="Animation" id="Animation_ex0ip"]
resource_name = "attack_back-left"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attack_sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot"
}]
}

[sub_resource type="Animation" id="Animation_47xrn"]
resource_name = "attack_back-right"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attack_sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot"
}]
}

[sub_resource type="Animation" id="Animation_r6ppf"]
resource_name = "attack_front"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attack_sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot"
}]
}

[sub_resource type="Animation" id="Animation_vbyuq"]
resource_name = "attack_front-left"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attack_sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot"
}]
}

[sub_resource type="Animation" id="Animation_u1iha"]
resource_name = "attack_front-right"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attack_sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot"
}]
}

[sub_resource type="Animation" id="Animation_bg5ss"]
resource_name = "attack_left"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attack_sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot"
}]
}

[sub_resource type="Animation" id="Animation_lmixr"]
resource_name = "attack_right"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attack_sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot"
}]
}

[sub_resource type="Animation" id="Animation_wbhhn"]
resource_name = "idle_back"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("enemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 4, 5]
}

[sub_resource type="Animation" id="Animation_0sqky"]
resource_name = "idle_front"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("enemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_8bwy3"]
resource_name = "idle_left"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("enemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [9, 10, 11]
}

[sub_resource type="Animation" id="Animation_0mflq"]
resource_name = "idle_left-back"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("enemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [18, 19, 20]
}

[sub_resource type="Animation" id="Animation_v7a0m"]
resource_name = "idle_left-front"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("enemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [12, 13, 14]
}

[sub_resource type="Animation" id="Animation_e1jdw"]
resource_name = "idle_right"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("enemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [6, 7, 8]
}

[sub_resource type="Animation" id="Animation_scfng"]
resource_name = "idle_right-back"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("enemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [21, 22, 23]
}

[sub_resource type="Animation" id="Animation_qtwmf"]
resource_name = "idle_right-front"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("enemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [15, 16, 17]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_auu5k"]
_data = {
"attack_back": SubResource("Animation_ovhcw"),
"attack_back-left": SubResource("Animation_ex0ip"),
"attack_back-right": SubResource("Animation_47xrn"),
"attack_front": SubResource("Animation_r6ppf"),
"attack_front-left": SubResource("Animation_vbyuq"),
"attack_front-right": SubResource("Animation_u1iha"),
"attack_left": SubResource("Animation_bg5ss"),
"attack_right": SubResource("Animation_lmixr"),
"idle_back": SubResource("Animation_wbhhn"),
"idle_front": SubResource("Animation_0sqky"),
"idle_left": SubResource("Animation_8bwy3"),
"idle_left-back": SubResource("Animation_0mflq"),
"idle_left-front": SubResource("Animation_v7a0m"),
"idle_right": SubResource("Animation_e1jdw"),
"idle_right-back": SubResource("Animation_scfng"),
"idle_right-front": SubResource("Animation_qtwmf")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gx7ud"]
animation = &"attack_front-left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_s31ej"]
animation = &"attack_front-right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_odxta"]
animation = &"attack_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jsspi"]
animation = &"attack_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gp1bn"]
animation = &"attack_back"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1mac2"]
animation = &"attack_back-left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hbd7h"]
animation = &"attack_back-right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2cqti"]
animation = &"attack_front"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_7jba0"]
blend_point_0/node = SubResource("AnimationNodeAnimation_gx7ud")
blend_point_0/pos = Vector2(-1, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_s31ej")
blend_point_1/pos = Vector2(1, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_odxta")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_jsspi")
blend_point_3/pos = Vector2(-1, 0)
blend_point_4/node = SubResource("AnimationNodeAnimation_gp1bn")
blend_point_4/pos = Vector2(0, -1)
blend_point_5/node = SubResource("AnimationNodeAnimation_1mac2")
blend_point_5/pos = Vector2(-1, -1)
blend_point_6/node = SubResource("AnimationNodeAnimation_hbd7h")
blend_point_6/pos = Vector2(1, -1)
blend_point_7/node = SubResource("AnimationNodeAnimation_2cqti")
blend_point_7/pos = Vector2(0, 1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_38c4y"]
animation = &"idle_left-front"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_glpa4"]
animation = &"idle_front"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xuesh"]
animation = &"idle_right-front"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_u81s7"]
animation = &"idle_right-back"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ntrvt"]
animation = &"idle_left-back"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_iyonw"]
animation = &"idle_back"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ibf1q"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_adbv2"]
animation = &"idle_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_baucc"]
blend_point_0/node = SubResource("AnimationNodeAnimation_38c4y")
blend_point_0/pos = Vector2(-1, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_glpa4")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_xuesh")
blend_point_2/pos = Vector2(1, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_u81s7")
blend_point_3/pos = Vector2(1, -1)
blend_point_4/node = SubResource("AnimationNodeAnimation_ntrvt")
blend_point_4/pos = Vector2(-1, -1)
blend_point_5/node = SubResource("AnimationNodeAnimation_iyonw")
blend_point_5/pos = Vector2(0, -1)
blend_point_6/node = SubResource("AnimationNodeAnimation_ibf1q")
blend_point_6/pos = Vector2(-1, 0)
blend_point_7/node = SubResource("AnimationNodeAnimation_adbv2")
blend_point_7/pos = Vector2(1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_h7msw"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ssah1"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_p2fwl"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_2brj3"]
states/Attack/node = SubResource("AnimationNodeBlendSpace2D_7jba0")
states/Attack/position = Vector2(611, 114)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_baucc")
states/Idle/position = Vector2(445, 114)
states/Start/position = Vector2(225, 100)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_h7msw"), "Idle", "Attack", SubResource("AnimationNodeStateMachineTransition_ssah1"), "Attack", "Idle", SubResource("AnimationNodeStateMachineTransition_p2fwl")]

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_e558t")

[node name="Health_Component" type="Node2D" parent="."]
script = ExtResource("2_5lvyh")

[node name="enemy" type="Sprite2D" parent="."]
texture = ExtResource("3_30pai")
hframes = 3
vframes = 8

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2t8jv")

[node name="Hitbox_Component" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_lomkv")]
health_component = NodePath("../Health_Component")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true
metadata/activated = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_auu5k")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_auu5k")
}
tree_root = SubResource("AnimationNodeStateMachine_2brj3")
anim_player = NodePath("../AnimationPlayer")
parameters/Attack/blend_position = Vector2(-0.998236, 0.015873)
parameters/Idle/blend_position = Vector2(0, 0)

[node name="Attack_sprites" type="Sprite2D" parent="."]
texture = ExtResource("5_oa5hq")
hframes = 4
vframes = 8
frame = 4

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[node name="RayCastDown" type="RayCast2D" parent="."]
target_position = Vector2(0, 100)
collision_mask = 3
script = ExtResource("6_kkusd")

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-100, 0)
collision_mask = 3
script = ExtResource("7_ggypq")

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(100, 0)
collision_mask = 3
script = ExtResource("8_abhmx")

[node name="RayCastUp" type="RayCast2D" parent="."]
target_position = Vector2(0, -100)
collision_mask = 3
script = ExtResource("9_pfecv")

[node name="RayCastUp-Left" type="RayCast2D" parent="."]
target_position = Vector2(-72, -72)
collision_mask = 3
script = ExtResource("10_aacqq")

[node name="RayCastUp-Right" type="RayCast2D" parent="."]
target_position = Vector2(72, -72)
collision_mask = 3
script = ExtResource("11_vj3u4")

[node name="RayCastDown-Right" type="RayCast2D" parent="."]
target_position = Vector2(72, 72)
collision_mask = 3
script = ExtResource("12_wos87")

[node name="RayCastDown-Left" type="RayCast2D" parent="."]
target_position = Vector2(-72, 72)
collision_mask = 3
script = ExtResource("13_trn8b")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
